# asteroids.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  wasm.rs
web/: index.html
